[package]
name = "krust"
version = "0.1.0"
authors = ["Alex Whitney <awhitney@tylercapital.co.uk>"]
links = "kdb"
build = "build.rs"

[dependencies]
libc = "*"
num = "*"
bitflags = "*"
nix = "*"
lazy_static = "*"

[build-dependencies]
syn = {version = "*", features = ["full", "extra-traits"] }

[lib]
name = "krust"

[features]
api = []
unchecked_utf8 = [] # Use faster but unsafe string conversion